--- a/latihan1.html
+++ b/latihan1.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tentang Kami</title>
     <link rel="stylesheet" href="css/hiasan.css">
+
+
 </head>
 
 <style type="text/css"> 
@@ -51,7 +53,7 @@
     <tbody>
     <tr>    
         <td>
-    <h1 align="center">
+    <h1 style="font-size: large; color: aqua;">
         <marquee direction="right" scrolldelay="100">
             Welcome To My Landing Page
         </marquee>
