--- a/latihanjs2.html
+++ b/latihanjs2.html
@@ -1,10 +1,14 @@
-<script> 
+<script>
+    //ini ada proses aritmatika
     var jari2 = 20;
     const PHI = 3.14;
 
+    //let adalah deklarasi variabel yg dapat dipakai di dalam  JS ES6
     let luas = PHI * jari2 * jari2;
-
+    var keliling = 2 * PHI * jari2; 
+    
     document.write("diketahui jari-jari sebuah lingkaran " + jari2 + "cm" + 
-    "<br> Luasnya adalah = " + luas)
+    "<br> Luasnya adalah = " + luas + 
+    "<br> kelilingnya adalah = " + keliling)
 
 </script>
