--- a/latihan3js.html
+++ b/latihan3js.html
@@ -4,7 +4,7 @@
     let keterangan = "";
 
     if(totalbelanja > 100000){
-        keterangan = "selamat anda dapat hadiah";
+        keterangan = "selamat anda dapat hadiah"; //proses dari kondisi
     }else {
         keterangan = "terimakasih sudah berbelanja";
     }
