update latihan  js

--- a/latihanjs11.html
+++ b/latihanjs11.html
@@ -24,6 +24,7 @@
                 var no = 1;
                 for (p of person){
                     let keterangan = (p.nilai >= 60)? "lulus" : "gagal";
+                    //set grade A-E
                     document.write(`<tr bgcolor="">
                 <td>${no++}</td>
                 <td>${p.nama}</td>
